--- a/css/footer.css
+++ b/css/footer.css
@@ -39,3 +39,21 @@
 .footer-terms, .footer-privacy, .terms-license {
     transition: var(--transition);
 }
+
+@media (max-width: 600px) {
+    .footer {
+        width: 60vh;
+        height: 10vh;
+        left: -5%;
+        top: 290%;
+    }
+
+    .footer-legal {
+        font-size: 1.2rem;
+    }
+
+    .footer-copy {
+        font-size: 1.2rem;
+        left: 36%;
+    }
+}
