--- a/css/hero.css
+++ b/css/hero.css
@@ -118,3 +118,46 @@
 .hero-button1:hover, .hero-button2:hover {
     transform: scale(1.05) rotate(1deg);
 }
+
+@media (max-width: 600px) {
+    .hero-logo {
+        display: none;
+    }
+
+    .hero-card {
+        width: 54vh;
+        left: 34%;
+    }
+
+    .hero-quote {
+        left: 5%;
+        font-size: 2.5rem;
+    }
+
+    .hero-info-text {
+        font-size: 1.3rem;
+        top: 25%;
+        left: 5%;
+    }
+
+    .hero-info-link {
+        font-size: 1.3rem;
+        top: 70%;
+        left: 5%;
+    }
+
+    .hero-button1 {
+        width: 54vh;
+        height: 6vh;
+        bottom: 3%;
+        left: 21%;;
+    }
+
+    .hero-button2 {
+        width: 54vh;
+        height: 6vh;
+        top: 120%;
+        left: 21%;;
+    }
+
+}
