--- a/css/socials.css
+++ b/css/socials.css
@@ -27,3 +27,20 @@
 .socials img:hover {
     transform: scale(1.2) rotate(5deg);
 }
+
+@media (max-width: 600px) {
+    .socials {
+        width: 54vh;
+        height: 10vh;
+        top: 210%;
+    }
+
+    .socials a {
+        margin: 0 30px;
+    }
+
+    .socials img {
+        height: 50px;
+        width: 50px;
+    }
+}
