--- a/css/hero.css
+++ b/css/hero.css
@@ -132,6 +132,9 @@
     .hero-logo {
         display: none;
     }
+    .navbar-site-name {
+        display: none;
+    }
 }
 
 @media (min-width: 1200px) {
