--- a/css/hero.css
+++ b/css/hero.css
@@ -132,7 +132,7 @@
     .hero-logo {
         display: none;
     }
-    .navbar-site-name {
+    .nav-site-name {
         display: none;
     }
 }
