--- a/css/navbar.css
+++ b/css/navbar.css
@@ -76,9 +76,16 @@
     white-space: nowrap;
 }
 
+@media (max-width: 1199px) {
+    .nav-site-name {
+        display: none;
+    }
+}
+
 @media (min-width: 992px) {
     .navbar {
         padding: 1rem 2rem;
+        display: none;
     }
     
     .nav-links a {
